update readme for final submission

--- a/.env.example
+++ b/.env.example
@@ -23,14 +23,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=XXXXXXXX
+MAIL_HOST=XXXXXXXX
+MAIL_PORT=XXXXXXXX
+MAIL_USERNAME=XXXXXXXX
+MAIL_PASSWORD=XXXXXXXX
+MAIL_ENCRYPTION=XXXXXXXX
+MAIL_FROM_ADDRESS=XXXXXXXX
+MAIL_FROM_NAME=XXXXXXXX
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
